// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches the snapshot with all modifiers 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-m-thinking"
  >
    <div>
      Panel with all modifiers
    </div>
  </div>
</DocumentFragment>
`;

exports[`Matches the snapshot with no modifiers 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div>
      Basic panel
    </div>
  </div>
</DocumentFragment>
`;
